Recursive trash restore with rename ability
