# internal/models/node.go
@@ -23,15 +23,16 @@ type RichNodeOwner struct {
 }
 
 type RichNode struct {
-	ID          string        `json:"id" example:"_vx2a-43VqRT5wz_s9u4"`
-	ParentID    *string       `json:"parent_id,omitempty" example:"fLW5kAh2ia9vYmjMnU4nZ"`
-	Name        string        `json:"name" example:"Raport_Q3.docx"`
-	NodeType    string        `json:"node_type" example:"file"`
-	SizeBytes   *int64        `json:"size_bytes,omitempty" example:"123456"`
-	MimeType    *string       `json:"mime_type,omitempty" example:"application/pdf"`
-	CreatedAt   time.Time     `json:"created_at"`
-	ModifiedAt  time.Time     `json:"modified_at"`
-	Owner       RichNodeOwner `json:"owner"`
-	IsFavorited bool          `json:"is_favorited" example:"true"`
-	IsShared    bool          `json:"is_shared" example:"false"`
+	ID               string        `json:"id" example:"_vx2a-43VqRT5wz_s9u4"`
+	ParentID         *string       `json:"parent_id,omitempty" example:"fLW5kAh2ia9vYmjMnU4nZ"`
+	OriginalParentID *string       `json:"original_parent_id,omitempty"`
+	Name             string        `json:"name" example:"Raport_Q3.docx"`
+	NodeType         string        `json:"node_type" example:"file"`
+	SizeBytes        *int64        `json:"size_bytes,omitempty" example:"123456"`
+	MimeType         *string       `json:"mime_type,omitempty" example:"application/pdf"`
+	CreatedAt        time.Time     `json:"created_at"`
+	ModifiedAt       time.Time     `json:"modified_at"`
+	Owner            RichNodeOwner `json:"owner"`
+	IsFavorited      bool          `json:"is_favorited" example:"true"`
+	IsShared         bool          `json:"is_shared" example:"false"`
 }
